--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,5 +1,9 @@
 header {
     background-color: maroon;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin: 0px;
+    padding: 1rem;
 }
 
 body {
