--- a/server/public/style.css
+++ b/server/public/style.css
@@ -18,6 +18,7 @@ h1  {
 
 main {
     margin: 10px;
+    background-color: lightgrey;
 }
 
 th {
@@ -34,4 +35,12 @@ th {
 
 div {
     border: solid 1px black;
+}
+
+#incompleteTasks {
+    background-color: lightgrey;
+}
+
+#completeTasks {
+    background-color: lightgreen;
 }
