--- a/server/public/style.css
+++ b/server/public/style.css
@@ -42,11 +42,13 @@ th {
 .complete {
     display: inline-block;
     background-color: #F7F7FF;
+
 }
 
 .incomplete {
     display: inline-block;
     background-color: #FFFF88;
+
 }
 
 .task {
@@ -67,7 +69,7 @@ th {
 }
 
 .inputBar {
-    margin: 0;
+    margin: 10%;
     padding: 1rem;
 }
 
@@ -84,3 +86,10 @@ th {
     color: #647FA6;
 }
 
+#incompleteTasks {
+    margin: 10%;
+}
+
+#completeTasks {
+    margin: 10%;
+}
